--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 # 使用HTML5标准
 spring.thymeleaf.mode=HTML5
+
+# DataSource
+spring.datasource.url=jdbc:mysql://192.168.0.150/vv_use?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC 
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# JPA
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
